# youtube_elt_pipeline_cloud

./: .gitignore  LICENSE  pyproject.toml
.github/workflows/: ci.yml
docs/: ERD_data_model_core.drawio  architecture.drawio  decisions.md  naming_conventions.md  requirements.md
src/youtube/: channels.py
